fix chatbox overflow on small mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -479,7 +479,8 @@ footer {
 .app-chatbox {
     background-color: #eee6e6;
     border-radius: 2rem;
-    padding: 1.5rem;
+    /* padding: 1.5rem; */
+    padding: 1.5rem .5rem 0 .5rem;
     /* padding-right: 2rem; */
     line-height: 1.5;
     flex-direction: column;
